# crash-learner

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: X_test.parquet  X_train.parquet  X_val.parquet  y_test.parquet  y_train.parquet  y_val.parquet
models/: best_model.keras
notebooks/: 01-data-exploration.ipynb  02-feature-engineering.ipynb  03-model-design.ipynb  04-training-process.ipynb  05-evaluation.ipynb
reports/: report.typ  slides.typ
src/data/: make_dataset.py  preprocess.py
src/models/: evaluate.py  model_arch.py  train.py
